# Rust_StartUpData

./: Cargo.toml  README.md
data/: Startups.csv
src/: data.rs  main.rs  model.rs  report.rs
